homework/1204/lab 1번문제.txt
lab 1

1-1. 결과

The value of n: 10

1-2.변수 n을 10으로 초기화하지않고 컴파일하여 보라. 
컴파일 오류가 발생하는가? 

오류가 났다. 
DataTeacher.java:7: error: variable n might not have been initialized
                System.out.println("The value of n: " + n);

1-3. flag라고하는 boolean 데이터타입을 가지는 변수를 선언하고
false로 초기화하라. 이것의 값을 출력하는 라인을 추가하라. 

boolean flag;
		flag=false
			System.out.println(flag);
1-4. 

int 임시 = 20;
		System.out.println(임시);
			임시 =sc.nextInt();

1-5.

오류났음 

Data.java:18: error: cannot find symbol
                        임시 =sc.nextInt();
                            ^
  symbol:   variable sc
  location: class Data
Data.java:20: error: incompatible types: possible lossy conversion from int to b
yte
                byte index = 200;
                             ^
Data.java:22: error: cannot find symbol
                        index=sc.nextByte();
                              ^
  symbol:   variable sc
  location: class Data
3 errors

